--- a/.github/workflows/build-testapplication-silverlight.yml
+++ b/.github/workflows/build-testapplication-silverlight.yml
@@ -26,6 +26,8 @@ jobs:
           echo "vdir=${{ env.virtual-directory-release }}" >> $env:GITHUB_ENV
           echo "apath=${{ env.app-path-release }}" >> $env:GITHUB_ENV
       - uses: microsoft/setup-msbuild@v1.1
+        with:
+          vs-version: 16.0
       - name: Inject slug/short variables
         uses: rlespinasse/github-slug-action@v3.x
       - name: Clone OpenSilver repo
