--- a/.github/workflows/build-testapplication-silverlight.yml
+++ b/.github/workflows/build-testapplication-silverlight.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   TestApplicationBuild:
-    runs-on: windows-latest
+    runs-on: windows-2019
     steps:
       - name: Set directory environment variables
         if: "${{ github.ref == 'refs/heads/develop' }}"
@@ -26,8 +26,6 @@ jobs:
           echo "vdir=${{ env.virtual-directory-release }}" >> $env:GITHUB_ENV
           echo "apath=${{ env.app-path-release }}" >> $env:GITHUB_ENV
       - uses: microsoft/setup-msbuild@v1.1
-        with:
-          vs-version: '[16.4,16.5)'
       - name: Inject slug/short variables
         uses: rlespinasse/github-slug-action@v3.x
       - name: Clone OpenSilver repo
