--- a/.github/workflows/build-testapplication-silverlight.yml
+++ b/.github/workflows/build-testapplication-silverlight.yml
@@ -32,6 +32,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: ${{ github.ref }}
+      - name: Clone Silverlight dlls
+        uses: actions/checkout@v2
+        with:
+          repository: ashotkhachatryan/SilverlightDlls
+          token: ${{ secrets.MY_TOKEN }}
       - name: Build and deploy
         working-directory: src\Tests\TestApplication
         run: |
