--- a/.github/workflows/build-testapplication-silverlight.yml
+++ b/.github/workflows/build-testapplication-silverlight.yml
@@ -37,6 +37,7 @@ jobs:
         with:
           repository: ashotkhachatryan/SilverlightDlls
           token: ${{ secrets.MY_TOKEN }}
+          path: './SilverlightDlls'
       - name: Build and deploy
         working-directory: src\Tests\TestApplication
         run: |
