--- a/.github/workflows/build-testapplication-silverlight.yml
+++ b/.github/workflows/build-testapplication-silverlight.yml
@@ -32,12 +32,9 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: ${{ github.ref }}
-      - name: ssh-add
-        run: |
-          ssh-agent -StartupType Manual
-          Start-Service ssh-agent
-          ssh-agent -s
-          echo "${SSH_PRIVATE_KEY}" | ssh-add -
+      - uses: webfactory/ssh-agent@v0.5.4
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
       - name: Clone Silverlight dlls
         uses: actions/checkout@v2
         with:
