--- a/.github/workflows/build-testapplication-opensilver.yml
+++ b/.github/workflows/build-testapplication-opensilver.yml
@@ -21,6 +21,12 @@ jobs:
     runs-on: windows-latest
     steps:
       - name: Set directory environment variables
+        if: "${{ github.ref == 'refs/heads/develop' }}"
+        run: |
+          echo "vdir=${{ env.virtual-directory }}" >> $env:GITHUB_ENV
+          echo "apath=${{ env.app-path }}" >> $env:GITHUB_ENV
+      - name: Set directory environment variables
+        if: "${{ github.ref == 'refs/heads/release_1.1.0' }}"
         run: |
           echo "vdir=${{ env.virtual-directory-release }}" >> $env:GITHUB_ENV
           echo "apath=${{ env.app-path-release }}" >> $env:GITHUB_ENV
