--- a/.github/workflows/build-testapplication-opensilver.yml
+++ b/.github/workflows/build-testapplication-opensilver.yml
@@ -8,8 +8,12 @@ env:
   deploy-service-url: 'opensilverdemos.scm.azurewebsites.net:443'
   next-release-version: '1.1.0'
 
+on:
+  workflow_dispatch:
+
 jobs:
   TestApplicationBuild:
+    #We should not run these steps on the forks by default.
     runs-on: windows-latest
     steps:
       - name: Set directory environment variables
